--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.4",
     "@hapi/vision": "^6.1.0",
-    "@types/hapi__inert": "^5.2.3",
+    "better-sqlite3": "^7.4.6",
     "dotenv": "^10.0.0",
     "instances-container": "^2.0.4",
     "node-cron": "^3.0.0",
@@ -38,7 +38,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/better-sqlite3": "^7.4.2",
     "@types/hapi__hapi": "^20.0.9",
+    "@types/hapi__inert": "^5.2.3",
     "@types/jest": "^27.0.2",
     "@types/node-cron": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
