--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.4",
+    "@hapi/jwt": "^2.1.0",
     "@hapi/vision": "^6.1.0",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^7.4.6",
@@ -45,6 +46,7 @@
     "@types/better-sqlite3": "^7.4.2",
     "@types/hapi__hapi": "^20.0.9",
     "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__jwt": "^2.0.1",
     "@types/jest": "^27.0.2",
     "@types/node-cron": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
