--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - master
 jobs:
   # Label of the runner job
-  runner-job:
+  automation-test-job:
     # You must use a Linux environment when using service containers or container jobs
     runs-on: ubuntu-latest
 
