--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,10 @@
   },
   "settings": {
     "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "."
+      },
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
